Fixed some issues.